@@ -136,7 +136,9 @@ JsVar *jswrap_fs_readdir(JsVar *path) {
           }
         }
       }
-#ifdef LINUX
+#ifndef LINUX
+      f_closedir(&dirs);
+#else
       closedir(dir);
 #endif
     }
@@ -330,6 +332,11 @@ JsVar *jswrap_fs_stat(JsVar *path) {
   FRESULT res = 0;
   if (jsfsInit()) {
     FILINFO info;
+#if _USE_LFN!=0
+    char lfnBuf[_MAX_LFN+1];
+    info.lfname = lfnBuf;
+    info.lfsize = sizeof(lfnBuf);
+#endif
     res = f_stat(pathStr, &info);
     if (res==0 /*ok*/) {
       JsVar *obj = jsvNewObject();
